# ava-plugins-guidelines

./: .gitmodules  CMakeLists.txt  README.md
api_core/: main.py
api_cpp/: README.md  main.cpp
api_cpp/includes/: ava_api.hpp
api_go/: README.md  main.go
api_go/package/: ava_api.go
api_python/: README.md  main.py
c++/: CMakeLists.txt  ava_api.grpc.pb.cc  ava_api.grpc.pb.h  ava_api.proto  main.cpp  run_test.sh
c++/server/: CMakeLists.txt  main.cpp
c++/server/include/: Netlib.hpp
c++/server/work_in_progress/: wip.hpp
go/client/: main.go  main.go~
go/server/: main.go  main.go~
go/test/: ava_api.pb.go  ava_api.proto
protobuf_tests/: CMakeLists.txt  ava_api.pb.cc  ava_api.pb.h  ava_api.proto  main.cpp
python/: demo.py
test/: ava_api.pb.cc  ava_api.pb.h  ava_api.proto  main.cpp
test/grpc/: Makefile  README.md  client.cc  server.cc
